test/tests/TypeValue.frost
method main() {
    def i := Int
}